Fix background color to get rid of white space on wider screen

--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,22 @@
 @import "tailwindcss";
 
+
+html, body, #root {
+  height: 100%;
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+  background: #101828;
+
+}
+
 @media print {
   body {
     background: #fff !important;
     color: #000 !important;
     font-size: 12pt;
   }
+
 
   header,
   footer,
